Add content view

--- a/client/explorer/explorer.less
+++ b/client/explorer/explorer.less
@@ -1,5 +1,15 @@
-ul.tree-view {
+.tree-view {
   & > li {
     cursor: pointer;
   }
+}
+
+.file-list-view {
+  float: left;
+  width: 20%;
+}
+
+.content-view {
+  float: left;
+  width: 80%;
 }
